--- a/project draft 1/Main/Info/InfoStoryboard.storyboard
+++ b/project draft 1/Main/Info/InfoStoryboard.storyboard
@@ -9,14 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Storyboard Reference-->
-        <scene sceneID="4AS-ZL-zlc">
-            <objects>
-                <viewControllerPlaceholder id="iKf-aH-30v" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CLB-RZ-Nyi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2606" y="871"/>
-        </scene>
         <!--Info-->
         <scene sceneID="GXX-lt-oYl">
             <objects>
@@ -154,6 +146,70 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wKB-WR-JO2" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3273.913043478261" y="857.8125"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Fmz-CR-EnR">
+            <objects>
+                <viewControllerPlaceholder id="gmq-7s-bgi" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XvA-0o-eJT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="802"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="4rO-5A-0UD">
+            <objects>
+                <viewControllerPlaceholder id="X1Q-tL-MTN" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FFO-ss-ZlJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="853"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Z5L-Q8-FWj">
+            <objects>
+                <viewControllerPlaceholder id="MI2-8Q-emW" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KPt-XK-vyy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="919"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="FKJ-sE-oma">
+            <objects>
+                <viewControllerPlaceholder id="T2f-xG-Ulz" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5yG-8r-JFh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="971"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Ydh-b5-9xe">
+            <objects>
+                <viewControllerPlaceholder id="5PG-3b-vSA" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tWI-mj-y0a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="802"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="SSp-Jf-CUw">
+            <objects>
+                <viewControllerPlaceholder id="6dg-sk-qCc" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s3d-7I-wHf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="853"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="x3g-gw-n9B">
+            <objects>
+                <viewControllerPlaceholder id="GcC-SZ-2K1" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3b2-Ju-AHS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="919"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Lit-iP-ECS">
+            <objects>
+                <viewControllerPlaceholder id="qJp-2Z-DAw" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bG6-O1-IYT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2457" y="971"/>
         </scene>
     </scenes>
     <resources>
