--- a/project draft 1/Main/Home/HomeStoryboard.storyboard
+++ b/project draft 1/Main/Home/HomeStoryboard.storyboard
@@ -15,7 +15,7 @@
                 <viewControllerPlaceholder id="f6l-RA-wqV" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dm1-V2-Qyi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-373" y="50"/>
+            <point key="canvasLocation" x="-369" y="18"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="z70-M9-8Z1">
@@ -129,12 +129,16 @@
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main Dishes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpD-lS-Nf4">
-                                <rect key="frame" x="68" y="70" width="278" height="49"/>
+                                <rect key="frame" x="100" y="106" width="214" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="qAo-Ko-jnB">
+                                <rect key="frame" x="160" y="41" width="93" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="J8H-7W-NCI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -142,7 +146,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X3r-uU-Boq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135" y="50"/>
+            <point key="canvasLocation" x="134.78260869565219" y="49.553571428571423"/>
         </scene>
         <!--Sheet View Controller-->
         <scene sceneID="6M7-P3-h0M">
@@ -226,11 +230,36 @@
             </objects>
             <point key="canvasLocation" x="795.6521739130435" y="49.553571428571423"/>
         </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="o1d-XQ-Dtg">
+            <objects>
+                <viewControllerPlaceholder id="Uxx-fk-FNg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VaM-CX-L3T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="69"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="uZQ-Ui-a3I">
+            <objects>
+                <viewControllerPlaceholder id="ZzR-9x-QvY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ak6-Cr-IUU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="135"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="MmD-fd-sze">
+            <objects>
+                <viewControllerPlaceholder id="dkH-Ny-qLN" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DoX-cu-XQL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="187"/>
+        </scene>
     </scenes>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="heart.fill" catalog="system" width="128" height="109"/>
+        <image name="logo" width="1333.3333740234375" height="1333.3333740234375"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="xmark.octagon.fill" catalog="system" width="128" height="112"/>
         <namedColor name="red">
