--- a/project draft 1/Main/LogIn/LogInStoryboard.storyboard
+++ b/project draft 1/Main/LogIn/LogInStoryboard.storyboard
@@ -10,14 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Storyboard Reference-->
-        <scene sceneID="JvV-QX-USK">
-            <objects>
-                <viewControllerPlaceholder id="QX8-AQ-nXS" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fIX-xU-bVH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-390" y="30"/>
-        </scene>
         <!--Log In View Controller-->
         <scene sceneID="8tQ-cb-ldq">
             <objects>
@@ -86,6 +78,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLr-uP-upB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="434.78260869565219" y="57.589285714285708"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="gzD-AM-ffP">
+            <objects>
+                <viewControllerPlaceholder id="EwW-an-Ofx" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KDT-ik-Ibc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="18"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="lu7-5B-Yq2">
+            <objects>
+                <viewControllerPlaceholder id="dYQ-ze-Yc2" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Scr-lr-9Lt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="69"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Viq-dG-XGS">
+            <objects>
+                <viewControllerPlaceholder id="rna-ip-Vem" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dMD-4g-SWQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="135"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="FWB-oT-P5o">
+            <objects>
+                <viewControllerPlaceholder id="VEE-70-ElB" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tS9-At-zfL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="187"/>
         </scene>
     </scenes>
     <resources>
