--- a/project draft 1/Main/SignUp/SignUpStoryboard.storyboard
+++ b/project draft 1/Main/SignUp/SignUpStoryboard.storyboard
@@ -9,14 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Storyboard Reference-->
-        <scene sceneID="SxS-pa-qNR">
-            <objects>
-                <viewControllerPlaceholder id="fjG-64-Lbt" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Bo3-GH-ic0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-253" y="36"/>
-        </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="4BZ-1V-Ima">
             <objects>
@@ -98,6 +90,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zwc-iw-7ni" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="366.66666666666669" y="73.660714285714278"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="8vi-uW-k3s">
+            <objects>
+                <viewControllerPlaceholder id="3FK-9w-BK2" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ihg-R0-KBa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="18"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Hf2-wF-xEo">
+            <objects>
+                <viewControllerPlaceholder id="Sig-jh-lBl" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NVQ-lm-H89" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="69"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="Yi6-h7-Rt6">
+            <objects>
+                <viewControllerPlaceholder id="0NT-rA-3tc" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QzT-v7-1CK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="135"/>
+        </scene>
+        <!--Storyboard Reference-->
+        <scene sceneID="jNH-DY-7hM">
+            <objects>
+                <viewControllerPlaceholder id="Nwr-vD-SYY" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zYX-yI-Amg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-369" y="187"/>
         </scene>
     </scenes>
     <resources>
